# pyhidra

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  noxfile.py  setup.cfg  setup.py
.github/workflows/: workflow.yml
pyhidra/: __init__.py  __main__.py  constants.py  core.py  ghidra.py  gui.py  install_desktop.py  install_plugins.py  javac.py  launcher.py  linux_shortcut.py  mac_shortcut.py  properties.py  script.py  uninstall_desktop.py  uninstall_plugin.py  version.py  win_shortcut.py
pyhidra/ghidra_scripts/: PyhidraBasics.py
pyhidra/java/plugin/: PyScriptProvider.java  PyScriptProviderNew.java  PyScriptProviderOld.java  PyhidraPlugin.java  PythonFieldExposer.java  __init__.py  completions.py  handler.py  plugin.py
pyhidra/java/plugin/interpreter/: CancelAction.java  InterpreterGhidraScript.java  InterpreterTaskMonitor.java  PyhidraInterpreterConnection.java  RestartAction.java
pyhidra/java/property/: AbstractJavaProperty.java  BooleanJavaProperty.java  ByteJavaProperty.java  CharacterJavaProperty.java  DoubleJavaProperty.java  FloatJavaProperty.java  IntegerJavaProperty.java  JavaProperty.java  JavaPropertyFactory.java  LongJavaProperty.java  ObjectJavaProperty.java  PropertyUtils.java  ShortJavaProperty.java
tests/: conftest.py  example_script.py  processify.py  test_argparser.py  test_core.py
tests/data/: example_script.py
