[metadata]
name = pyhidra
author = DC3
author_email = dcci@dc3.mil
version = attr:pyhidra.__version__
description = Native CPython for Ghidra
long_description_content_type = text/markdown
long_description = file:README.md
license = MIT
license_files =
    LICENSE
    NOTICE
url = https://github.com/Defense-Cyber-Crime-Center/pyhidra
keywords = ghidra
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    Jpype1>=1.3.0
    pyobjc; sys_platform == "darwin"

[options.entry_points]
console_scripts =
    pyhidra = pyhidra.__main__:main
gui_scripts =
    pyhidraw = pyhidra.gui:gui

[tool:pytest]
testpaths = tests
addopts =
    -p no:faulthandler

