[metadata]
name = pyhidra
author = DC3
author_email = dcci@dc3.mil
version = attr:pyhidra.__version__
description = Native CPython for Ghidra
long_description_content_type = text/markdown
long_description = file:README.md
license = MIT
license_files =
    LICENSE
url = https://github.com/Defense-Cyber-Crime-Center/pyhidra
keywords = ghidra
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    Jpype1>=1.3.0; python_version < '3.12'
    pyobjc; sys_platform == "darwin"
    Jpype1>=1.5.0; python_version >= '3.12'

[options.entry_points]
console_scripts =
    pyhidra = pyhidra.__main__:main
gui_scripts =
    pyhidraw = pyhidra.gui:_gui

[options.extras_require]
testing =
    pytest
    pytest-datadir

[tool:pytest]
testpaths = tests
required_plugins =
    pytest-datadir
addopts =
    -p no:faulthandler
